Fix toast styling, max width, gap, and text overflow

--- a/ui/components/multichain/toast/index.scss
+++ b/ui/components/multichain/toast/index.scss
@@ -4,4 +4,14 @@
   margin-inline-start: 10px;
   margin-inline-end: 10px;
   z-index: 200;
+  display: flex;
+  gap: 10px;
+  width: 90%;
+  flex-direction: column;
+  max-width: 600px;
+  overflow-wrap: break-word;
+}
+
+.toast-text {
+  overflow-wrap: break-word;
 }
